# solarmax2mqtt

./: .editorconfig  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
src/solarmax2mqtt/: __init__.py  __main__.py  agent.py  docker_main.py
